// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegistreringEvent fetches student data from UG 1`] = `
{
  "StudentParticipation": {
    "canvasSisId": "u1dummyuser",
    "email": "email@email.com",
    "id": "bbcce853-4df3-11e8-a562-6ec76bb54b9f.41717c91-4028-11ee-bf53-2115569549a8",
    "ladokCourseId": "e51b9586-9501-11ee-a0ce-a9a57d284dbd",
    "ladokCourseRoundId": "41717c91-4028-11ee-bf53-2115569549a8",
    "ladokStudentId": "bbcce853-4df3-11e8-a562-6ec76bb54b9f",
    "locations": [],
    "name": "Dummy User",
    "program": {
      "code": "dummyProgramCode",
      "name": {
        "en": "Dummy Program EN",
        "sv": "Dummy Program SV",
      },
      "specialization": undefined,
      "startTerm": "20231",
      "studyYear": 2023,
    },
    "roles": [
      "student",
    ],
  },
}
`;

exports[`RegistreringEvent stores a transaction log 1`] = `
[
  {
    "action": "insert",
    "collectionName": "StudentParticipation",
    "createdAt": "1884-01-01 Test Dummy",
    "delta": {
      "canvasSisId": "u1dummyuser",
      "email": "email@email.com",
      "id": "bbcce853-4df3-11e8-a562-6ec76bb54b9f.41717c91-4028-11ee-bf53-2115569549a8",
      "ladokCourseId": "e51b9586-9501-11ee-a0ce-a9a57d284dbd",
      "ladokCourseRoundId": "41717c91-4028-11ee-bf53-2115569549a8",
      "ladokStudentId": "bbcce853-4df3-11e8-a562-6ec76bb54b9f",
      "locations": [],
      "name": "Dummy User",
      "program": {
        "code": "dummyProgramCode",
        "name": {
          "en": "Dummy Program EN",
          "sv": "Dummy Program SV",
        },
        "specialization": undefined,
        "startTerm": "20231",
        "studyYear": 2023,
      },
      "roles": [
        "student",
      ],
    },
    "relatedId": "__dummy_id__",
  },
]
`;

exports[`RegistreringEvent writes correct data to db 1`] = `
{
  "StudentParticipation": {
    "canvasSisId": "u1dummyuser",
    "email": "email@email.com",
    "id": "bbcce853-4df3-11e8-a562-6ec76bb54b9f.41717c91-4028-11ee-bf53-2115569549a8",
    "ladokCourseId": "e51b9586-9501-11ee-a0ce-a9a57d284dbd",
    "ladokCourseRoundId": "41717c91-4028-11ee-bf53-2115569549a8",
    "ladokStudentId": "bbcce853-4df3-11e8-a562-6ec76bb54b9f",
    "locations": [],
    "name": "Dummy User",
    "program": {
      "code": "dummyProgramCode",
      "name": {
        "en": "Dummy Program EN",
        "sv": "Dummy Program SV",
      },
      "specialization": undefined,
      "startTerm": "20231",
      "studyYear": 2023,
    },
    "roles": [
      "student",
    ],
  },
}
`;
